@@ -9,6 +9,7 @@ Improvements
 Features
  - Command bundle items now supports changing of output type through exit codes
  - Last open windows and files are restored upon startup
+ - Detect external changes to open files
 
 Bugfixes
  - NPE whith new tabs created by bundles
